fix  spacing on charts on smaller screen size

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,7 +83,7 @@
 .middle-dashboard {
   margin-top: 100px;
   width: 100%;
-  height: 35vh;
+  height: 25vh;
 }
 .bottom-dashbaord {
   margin-top: 70px;
@@ -138,6 +138,7 @@
   }
   .bottom-dashbaord {
     grid-template-columns: 1fr;
+    grid-gap: 20px;
     height: 100%;
   }
 }
@@ -148,9 +149,11 @@
 }
 #genre {
   width: 100% !important;
+  height: 100%;
 }
 #region {
   width: 100% !important;
+  height: 100%;
 }
 #publisher {
   width: 100% !important;
